--- a/TravelClient/Views/Home/Index.cshtml
+++ b/TravelClient/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Travel Reviews</h1>
+    <p>Click here for a list of <a href="/reviews">reviews</a> from our Users travels</p>
 </div>
