--- a/TravelClient/Views/Home/Index.cshtml
+++ b/TravelClient/Views/Home/Index.cshtml
@@ -6,3 +6,5 @@
     <h1 class="display-4">Welcome to Travel Reviews</h1>
     <p>Click here for a list of <a href="/reviews">reviews</a> from our Users travels</p>
 </div>
+
+@Html.ActionLink("Register", "Register", "Account")
