--- a/TravelClient/Views/Reviews/Create.cshtml
+++ b/TravelClient/Views/Reviews/Create.cshtml
@@ -4,7 +4,7 @@
 
 @model TravelClient.Models.Review
 
-<h4>Add a new animal to Cretaceous Park</h4>
+<h4>Add a new review</h4>
 
 @using (Html.BeginForm())
 {
